--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage --silent",
-    "test:silent": "jest --coverage --silent --noStackTrace",
+    "test:silent": "jest --coverage --silent --noStackTrace .",
     "dev": "ts-node-dev src/server.ts"
   },
   "author": "Victor Prado",
