adjusments for backend deploy

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "jest --coverage --silent",
     "test:silent": "jest --coverage --silent --noStackTrace .",
+    "build": "tsc",
+    "start": "node dist/server.js",
     "dev": "ts-node-dev src/server.ts"
   },
   "author": "Victor Prado",
