changing to postgresql

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "jest --coverage --silent",
     "test:silent": "jest --coverage --silent --noStackTrace .",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "npx prisma migrate deploy && node dist/server.js",
     "dev": "ts-node-dev src/server.ts"
   },
   "author": "Victor Prado",
